Refactor: Adding token to swagger user login response doc
